Add game() function which play 5 rounds
Game function with a forloop that calls
playRound() 5 times. This function also
where the player can input their choice.
This function also keeps track of the
score between player and computer.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Rock Paper Scissor SHOOT!!</h1>
+        <p>Description. Classical game of rock paper scissors. The current live game only works on console</p>
         <script src="./javascript.js"></script>
     </body>
 </html>
