Add style to website
Added style to website including images,
background image. Change the font color,
and font size.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock-Paper-Scissors</title>
-        <link rel="stylesheets" href="./style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Rock Paper Scissor SHOOT!!</h1>
-        <p>Description. Classical game of rock paper scissors. The current live game only works on console</p>
+        <div class="icon-container">
+            <div class="rock">
+                <img src="./images/rock.png" alt="Rock Icon">
+                <p class="text">Rock</p>
+            </div>
+            <div class="paper">
+                <img src="./images/paper.png" alt="Paper Icon">
+                <p class="text">Paper</p>
+            </div>
+            <div class="scissor">
+                <img src="./images/scissor.png" alt="Scissor Icon">
+                <p class="text">Scissors</p>
+            </div>
+        </div>
+        <div class="score-container"></div>
         <script src="./javascript.js"></script>
     </body>
 </html>
