Add functionality to the buttons. Add Scoreboard
Added functionality to buttons so that clicking
on them will make use the function playRound().
Added a scoreboard which can be updated with
function update(). Styled the scoreboard to be
consistent with the page.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
     <body>
         <h1>Rock Paper Scissor SHOOT!!</h1>
         <div class="icon-container">
-            <div class="rock">
+            <div class="icon" id="rock">
                 <img src="./images/rock.png" alt="Rock Icon">
                 <p class="text">Rock</p>
             </div>
-            <div class="paper">
+            <div class="icon" id="paper">
                 <img src="./images/paper.png" alt="Paper Icon">
                 <p class="text">Paper</p>
             </div>
-            <div class="scissor">
+            <div class="icon" id="scissors">
                 <img src="./images/scissor.png" alt="Scissor Icon">
                 <p class="text">Scissors</p>
             </div>
         </div>
-        <div class="score-container"></div>
+        <div class="score-container">
+            <div class="scoreboard">
+                <h2>Scoreboard</h2>
+                <p class="game-outcome"></p>
+            </div>
+        </div>
         <script src="./javascript.js"></script>
     </body>
 </html>
