--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
                 <p class="text">Scissors</p>
             </div>
         </div>
+        <div class="cpu-choice">
+            <p class="text">CPU choice:  </p>
+            <img class="cpu-pick">
+            <p class="game-outcome"></p>
+        </div>
         <div class="score-container">
             <div class="scoreboard">
                 <h2>Scoreboard</h2>
-                <p class="game-outcome"></p>
+
             </div>
         </div>
         <script src="./javascript.js"></script>
