Add functionality to scoreboard
Added functionality to scoreboard
where it will change the player
score or cpu score depending on
who wins.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
         <div class="score-container">
             <div class="scoreboard">
                 <h2>Scoreboard</h2>
-
+                <div class="score-container2">
+                    <div>
+                        <p class="text">Player Score:</p>
+                        <p class="player-score">0</p>
+                    </div>
+                    <div>
+                        <p class="text">CPU Score:</p>
+                        <p class="cpu-score">0</p>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="./javascript.js"></script>
