Add restart game with play again option
Added a restart game that will change the
overlay display and will show a popup-like
interface. This popup will have a play again
button.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="cpu-choice">
             <p class="text">CPU choice:  </p>
             <img class="cpu-pick">
-            <p class="game-outcome"></p>
+            <p class="round-outcome"></p>
         </div>
         <div class="score-container">
             <div class="scoreboard">
@@ -39,6 +39,13 @@
                         <p class="cpu-score">0</p>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="overlay">
+            <div class="modal">
+                <p class="game-outcome"></p>
+                <button class="play-again">Play again</button>
             </div>
         </div>
         <script src="./javascript.js"></script>
